# imdb2000_recommender

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  flatpak.json
assets/datasets/: top_rated_2000webseries.csv
assets/themes/: dark_mode.css
crates/roberta/: Cargo.toml
crates/roberta/src/: fill_mask.rs  lib.rs  loader.rs
crates/roberta/src/show_prediction/: mod.rs
crates/shows_import/: Cargo.toml
crates/shows_import/examples/: test.rs
crates/shows_import/src/: show.rs
release/windows/: .manifest.json
release/windows/app/assets/: dark_mode-dxha9dc7feb3508e16.css
src/: main.rs
src/charts/: bargraph.rs  descriptive.rs  donut_chart.rs  mod.rs  pie_chart.rs  predictive.rs
src/ui/: agents.rs  debug_menu.rs  drag_elements.rs  horizontal_scroll.rs  mod.rs
src/ui/graphs/: descriptive.rs  mod.rs  predictive.rs
