[package]
license = "MIT OR Apache-2.0"
name = "roberta"
version = "0.2.0"
edition = "2021"

[dependencies]
# Burn
burn = { workspace = true, default-features = false, features = [
  "dataset",
  "std",
  "wgpu"
] }
itertools = {workspace = true}
candle-core = {workspace = true}
# Tokenizer
tokenizers = { workspace = true, default-features = false, features = [
  "onig",
  "http",
] }
derive-new = {workspace = true}
hf-hub = { workspace = true, features = ["tokio"] }

# Utils
serde = { workspace = true, features = ["std", "derive"] }
libm ={workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}


[lints.clippy]
unstable_lints = "deny"